--- a/css/details.css
+++ b/css/details.css
@@ -212,6 +212,16 @@ footer {
         margin: 10px;
     }
 
+    .loading {
+        display: flex;
+        justify-content: center;
+    }
+
+    .gif {
+        width: 300px;
+        height: auto;
+    }
+
 }
 
 
@@ -228,6 +238,11 @@ footer {
     .top img {
         margin: auto;
         width: 80%;
+        height: auto;
+    }
+
+    .gif {
+        width: 100px;
         height: auto;
     }
 }
