--- a/css/contact.css
+++ b/css/contact.css
@@ -17,16 +17,9 @@ nav {
     width: 100%;
 }
 
-.logo {
-    color: #ffffff;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 22px;
-}
-
-.logo a {
-    text-decoration: none;
-    color: #ffffff;
+.logo img{
+    height: 50px;
+    width: auto;
 }
 
 .nav-list {
