--- a/css/styles.css
+++ b/css/styles.css
@@ -17,17 +17,11 @@ nav {
     width: 100%;
 }
 
-.logo {
-    color: #ffffff;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 22px;
+.logo img{
+    height: 50px;
+    width: auto;
 }
 
-.logo a {
-    text-decoration: none;
-    color: #ffffff;
-}
 
 .nav-list {
     display: flex;
